Adding nuget metadata

--- a/src/MDD4All.Jira.DataAccess/MDD4All.Jira.DataAccess.csproj
+++ b/src/MDD4All.Jira.DataAccess/MDD4All.Jira.DataAccess.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>MDD4All.de, Dr. Oliver Alt</Authors>
+    <Company>MDD4All.de, Dr. Oliver Alt</Company>
+    <Description>REST Data Access implementation for Jira</Description>
+    <Copyright>(c) MDD4All.de</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageTags>MDD4All Jira DataAccess</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
