Adding writing methods and signing the assembly

--- a/src/MDD4All.Jira.DataAccess/MDD4All.Jira.DataAccess.csproj
+++ b/src/MDD4All.Jira.DataAccess/MDD4All.Jira.DataAccess.csproj
@@ -8,6 +8,8 @@
     <Copyright>(c) MDD4All.de</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>MDD4All Jira DataAccess</PackageTags>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>MDD4All_Github.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
