--- a/src/MDD4All.Jira.DataAccess/MDD4All.Jira.DataAccess-dev.csproj
+++ b/src/MDD4All.Jira.DataAccess/MDD4All.Jira.DataAccess-dev.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>MDD4All.Jira.DataAccess</AssemblyName>
     <RootNamespace>MDD4All.Jira.DataAccess</RootNamespace>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>MDD4All_Github.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
